<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="@color/white">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/text1_basedialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:lines="2"
        android:textColor="@color/black"
        android:textSize="20sp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/text2_basedialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lin_callout_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button1_basedialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kxq"/>
        <Button
            android:id="@+id/button2_basedialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ckls"/>
        <Button
            android:id="@+id/button3_basedialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/xzjc"/>
    </LinearLayout>
</LinearLayout>