<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/sjjgmc"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/zcdz"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/yyzzh"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/bazmbh"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/fzr"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/jcrq"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/ssrw"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/rwlx"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/jcr"
               android:gravity="right"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:id="@+id/tv1_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="北京正泰恒达房地产经纪有限公司"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv2_detailinfo"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="海淀区北京市海淀区恩济花园写字楼400室"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv3_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="110108013327144"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv4_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="京经纪（2011）第6402号"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv5_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="张凡"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv6_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="2015-4-23"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv7_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="检查"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv8_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="日常检查"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
           <TextView
               android:id="@+id/tv9_detailinfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="陈琪 龚连芳"
               android:layout_marginLeft="20dp"
               android:textSize="20sp"/>
       </LinearLayout>
   </LinearLayout>
</LinearLayout>